# Magic-Snooker-2D

./: CMakeLists.txt  README.md
Assets/Sprites/Blocks/: texture.json
Source/: AudioSystem.cpp  Game.cpp  Game.h  HUD.cpp  HUD.h  Main.cpp  Score.cpp  Score.h
Source/Actors/: Actor.cpp  Actor.h  Background.cpp  Background.h  Ball.cpp  Ball.h  Block.cpp  Bucket.cpp  Bucket.h  ColorBall.cpp  ColorBall.h  Cue.cpp  Cue.h  InvisibleAABBWall.cpp  InvisibleAABBWall.h  InvisibleCollider.cpp  InvisibleCollider.h  InvisibleOBBWall.cpp  InvisibleOBBWall.h  Mario.cpp  Spawner.cpp  Table.cpp  Table.h  WhiteBall.cpp  WhiteBall.h
Source/Components/: Component.cpp  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  CircleColliderComponent.cpp  CircleColliderComponent.h  OBBColliderComponent.cpp  OBBColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawCircleComponent.cpp  DrawCircleComponent.h  DrawPolygonComponent.cpp  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/UIElements/: UIButton.cpp  UIElement.cpp  UIFont.cpp  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp
